Jobs are now submitted to the persistent EMR cluster using EMR steps